Avoid a unnecessary resorting when items are changed, only resort the items when the sorting role value is changed.

BUG: 299565
FIXED-IN: 4.11
REVIEW: 111146